# four_color

./: .gitignore  README.md  README.rst  pyproject.toml
four_color/: __init__.py
src/four_color/: __init__.py
src/tests/: test_solve.py
tests/: test_four_color.py
