[tool.poetry]
authors = ["SaitoTsutomu <tsutomu7@hotmail.co.jp>"]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
description = "`four_color` is a package for Four Color Problem."
homepage = "https://github.com/SaitoTsutomu/four_color"
license = "Apache-2.0"
name = "four_color"
readme = "README.rst"
version = "0.2.1"

[tool.poetry.dependencies]
flask = "^3.0"
networkx = "^3.1"
pillow = "^10.0"
pulp = "^2.7"
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.9"
flake8 = "^6.1"
isort = "^5.12"
mypy = "^1.5"
pytest = "^7.4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
