[project]
authors = [{name = "Saito Tsutomu", email = "tsutomu7@hotmail.co.jp"}]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "flask>=3.1.0",
  "networkx>=3.4.2",
  "pillow>=11.1.0",
  "pulp>=2.9.0",
]
description = "`four_color` is a package for Four Color Problem."
license = {text = "Apache-2.0"}
name = "four_color"
readme = "README.md"
requires-python = ">=3.11"
version = "0.5.1"

[project.urls]
homepage = "https://github.com/SaitoTsutomu/four_color"

[tool.uv]
dev-dependencies = [
  "pytest>=8.3.4",
]

[tool.mypy]
files = "src"
ignore_missing_imports = true

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
ignore = ["ANN001", "ANN20", "CPY", "D1", "D2", "D4", "DOC201", "E501"]
preview = true
select = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
